[ DE12649: Lina ] fixed the issue that when attachment image is too big, you can't see the whole image, the page doesn't scroll.

--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -10,7 +10,7 @@
     .modal-fade-screen {
       opacity: 1;
       visibility: visible;
-
+      overflow: auto;
     }
     .modal-fade-screen .modal-inner {
       @include media($large-screen) {
